--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 #header .brand{
     display: flex;
     flex-direction: row;
+    margin-left: 45px;
 }
 #header img{
     margin-top: 5px;
@@ -50,15 +51,16 @@
 }
 #header .brand h1{
     margin-left: 5px;
-    font-family: harrington;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: ;
 }
 #header h2{
-    font-size: 2rem;
+    font-size: 16px;
     margin-bottom: px;
     padding-bottom: 50px;
     padding-top: 50px;
-    font-family: gabriola;
+    margin-left: 30px;
+    font-family: 'Gills Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 0.2rem;
     color: rgb(252, 212, 218);
 }
@@ -69,6 +71,7 @@
 }
 #header h4{
     padding-bottom: 10px;
+    margin-left: 10px;
 }
 #header .nav-bar{
     align-items: center;
@@ -186,7 +189,7 @@
     background-color: rgb(196, 14, 111);
     color: pink;
     height: 630vh; 
-    font-family: gabriola;   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
 }
 
 #main h1{
@@ -199,6 +202,8 @@
 #main h2{
     padding-bottom: px;
     color: black;
+     margin-top: 10px;
+    
 }
 #main p{
     font-size: 1.4em;
@@ -211,5 +216,11 @@
 #main h6{
     font-size: 2rem;
     color: black;
+}
+#main .pur p{
+    margin-top: 10px;
+}
+#main .par p{
+    margin-top: 10px;
 }
 /*End main section*/
