--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@
     background-color: rgb(196, 14, 111);
     color: pink;
     font-size: 10px;
-    height: 420vh; 
+    height: 410vh; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
 }
 
@@ -199,6 +199,7 @@
     text-align: justify;
     font-family: ;
     font-size: 14px;
+    margin-bottom: 25px;
 }
 #main h2{
     padding-bottom: px;
