--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');
-
-html{
-    font-family: 'Charmonman', cursive;
-    font-size: ;
-    font-weight: 500;
-}
-
-
 *{
     margin: 0;
     padding: 0;
@@ -60,7 +51,7 @@ html{
 }
 #header .brand h1{
     margin-left: 5px;
-    /*font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: ;
 }
 #header h2{
@@ -69,7 +60,7 @@ html{
     padding-bottom: 50px;
     padding-top: 50px;
     margin-left: 30px;
-    /*font-family: 'Gills Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
+    font-family: 'Gills Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 0.2rem;
     color: rgb(252, 212, 218);
 }
@@ -199,7 +190,7 @@ html{
     color: pink;
     font-size: 10px;
     height: 420vh; 
-    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
 }
 
 #main h1{
@@ -230,7 +221,7 @@ html{
 }
 #main .pur p{
     margin-top: 10px;
-    font-weight: bold;
+    font-weight: ;
 }
 #main .par p{
     margin-top: 10px;
